==> HorseMa/LoRaMac-node/src/boards/MJLoRaWanModem/sx1276.c <==
#include <math.h>
#include <string.h>
#include "board-config.h"
#include "utilities.h"
#include "timer.h"
#include "radio.h"
#include "delay.h"
#include "sx1276.h"
#include "sx1276-board.h"
#include "lpc824board.h"
#include "debug.h"
#define RSSI_OFFSET_LF                              -164
#define RSSI_OFFSET_HF                              -157

void SX1276SetTxConfig( RadioModems_t modem, int8_t power, uint32_t fdev,
                        uint32_t bandwidth, uint32_t datarate,
                        uint8_t coderate, uint16_t preambleLen,
                        bool fixLen, bool crcOn, bool freqHopOn,
                        uint8_t hopPeriod, bool iqInverted, uint32_t timeout )
{
    SX1276SetModem( modem );

    SX1276SetRfTxPower( power );

    switch( modem )
    {
    case MODEM_FSK:
#if 0
        {
            SX1276.Settings.Fsk.Power = power;
            SX1276.Settings.Fsk.Fdev = fdev;
            SX1276.Settings.Fsk.Bandwidth = bandwidth;
            SX1276.Settings.Fsk.Datarate = datarate;
            SX1276.Settings.Fsk.PreambleLen = preambleLen;
            SX1276.Settings.Fsk.FixLen = fixLen;
            SX1276.Settings.Fsk.CrcOn = crcOn;
            SX1276.Settings.Fsk.IqInverted = iqInverted;
            SX1276.Settings.Fsk.TxTimeout = timeout;

            fdev = ( uint16_t )( ( double )fdev / ( double )FREQ_STEP );
            SX1276Write( REG_FDEVMSB, ( uint8_t )( fdev >> 8 ) );
            SX1276Write( REG_FDEVLSB, ( uint8_t )( fdev & 0xFF ) );

            datarate = ( uint16_t )( ( double )XTAL_FREQ / ( double )datarate );
            SX1276Write( REG_BITRATEMSB, ( uint8_t )( datarate >> 8 ) );
            SX1276Write( REG_BITRATELSB, ( uint8_t )( datarate & 0xFF ) );

            SX1276Write( REG_PREAMBLEMSB, ( preambleLen >> 8 ) & 0x00FF );
            SX1276Write( REG_PREAMBLELSB, preambleLen & 0xFF );

            SX1276Write( REG_PACKETCONFIG1,
                         ( SX1276Read( REG_PACKETCONFIG1 ) &
                           RF_PACKETCONFIG1_CRC_MASK &
                           RF_PACKETCONFIG1_PACKETFORMAT_MASK ) |
                           ( ( fixLen == 1 ) ? RF_PACKETCONFIG1_PACKETFORMAT_FIXED : RF_PACKETCONFIG1_PACKETFORMAT_VARIABLE ) |
                           ( crcOn << 4 ) );
            SX1276Write( REG_PACKETCONFIG2, ( SX1276Read( REG_PACKETCONFIG2 ) | RF_PACKETCONFIG2_DATAMODE_PACKET ) );
        }
#endif
        break;
    case MODEM_LORA:
        {
            SX1276.Settings.LoRa.Power = power;
            if( bandwidth > 2 )
            {
                // Fatal error: When using LoRa modem only bandwidths 125, 250 and 500 kHz are supported
                while( 1 );
            }
            bandwidth += 7;
            SX1276.Settings.LoRa.Bandwidth = bandwidth;
            SX1276.Settings.LoRa.Datarate = datarate;
            SX1276.Settings.LoRa.Coderate = coderate;
            SX1276.Settings.LoRa.PreambleLen = preambleLen;
            SX1276.Settings.LoRa.FixLen = fixLen;
            SX1276.Settings.LoRa.FreqHopOn = freqHopOn;
            SX1276.Settings.LoRa.HopPeriod = hopPeriod;
            SX1276.Settings.LoRa.CrcOn = crcOn;
            SX1276.Settings.LoRa.IqInverted = iqInverted;
            SX1276.Settings.LoRa.TxTimeout = timeout;

            if( datarate > 12 )
            {
                datarate = 12;
            }
            else if( datarate < 6 )
            {
                datarate = 6;
            }
            if( ( ( bandwidth == 7 ) && ( ( datarate == 11 ) || ( datarate == 12 ) ) ) ||
                ( ( bandwidth == 8 ) && ( datarate == 12 ) ) )
            {
                SX1276.Settings.LoRa.LowDatarateOptimize = 0x01;
            }
            else
            {
                SX1276.Settings.LoRa.LowDatarateOptimize = 0x00;
            }

            if( SX1276.Settings.LoRa.FreqHopOn == true )
            {
                SX1276Write( REG_LR_PLLHOP, ( SX1276Read( REG_LR_PLLHOP ) & RFLR_PLLHOP_FASTHOP_MASK ) | RFLR_PLLHOP_FASTHOP_ON );
                SX1276Write( REG_LR_HOPPERIOD, SX1276.Settings.LoRa.HopPeriod );
            }

            SX1276Write( REG_LR_MODEMCONFIG1,
                         ( SX1276Read( REG_LR_MODEMCONFIG1 ) &
                           RFLR_MODEMCONFIG1_BW_MASK &
                           RFLR_MODEMCONFIG1_CODINGRATE_MASK &
                           RFLR_MODEMCONFIG1_IMPLICITHEADER_MASK ) |
                           ( bandwidth << 4 ) | ( coderate << 1 ) |
                           fixLen );

            SX1276Write( REG_LR_MODEMCONFIG2,
                         ( SX1276Read( REG_LR_MODEMCONFIG2 ) &
                           RFLR_MODEMCONFIG2_SF_MASK &
                           RFLR_MODEMCONFIG2_RXPAYLOADCRC_MASK ) |
                           ( datarate << 4 ) | ( crcOn << 2 ) );

            SX1276Write( REG_LR_MODEMCONFIG3,
                         ( SX1276Read( REG_LR_MODEMCONFIG3 ) &
                           RFLR_MODEMCONFIG3_LOWDATARATEOPTIMIZE_MASK ) |
                           ( SX1276.Settings.LoRa.LowDatarateOptimize << 3 ) );

            SX1276Write( REG_LR_PREAMBLEMSB, ( preambleLen >> 8 ) & 0x00FF );
            SX1276Write( REG_LR_PREAMBLELSB, preambleLen & 0xFF );

            if( datarate == 6 )
            {
                SX1276Write( REG_LR_DETECTOPTIMIZE,
                             ( SX1276Read( REG_LR_DETECTOPTIMIZE ) &
                               RFLR_DETECTIONOPTIMIZE_MASK ) |
                               RFLR_DETECTIONOPTIMIZE_SF6 );
                SX1276Write( REG_LR_DETECTIONTHRESHOLD,
                             RFLR_DETECTIONTHRESH_SF6 );
            }
            else
            {
                SX1276Write( REG_LR_DETECTOPTIMIZE,
                             ( SX1276Read( REG_LR_DETECTOPTIMIZE ) &
                             RFLR_DETECTIONOPTIMIZE_MASK ) |
                             RFLR_DETECTIONOPTIMIZE_SF7_TO_SF12 );
                SX1276Write( REG_LR_DETECTIONTHRESHOLD,
                             RFLR_DETECTIONTHRESH_SF7_TO_SF12 );
            }
        }
        break;
    }
}

void SX1276WriteBuffer( uint16_t addr, uint8_t *buffer, uint8_t size )
{
#if 1
    uint16_t loop = 0,temp = 0;
    Chip_SPI_ClearStatus(LPC_SPI1, SPI_STAT_CLR_RXOV | SPI_STAT_CLR_TXUR | SPI_STAT_CLR_SSA | SPI_STAT_CLR_SSD);
    //Chip_SPI_SetControlInfo(LPC_SPI1, 8, SPI_TXCTL_ASSERT_SSEL | SPI_TXCTL_EOF);
    while(!(Chip_SPI_GetStatus(LPC_SPI1) & SPI_STAT_TXRDY));
    Chip_SPI_SendFirstFrame(LPC_SPI1, addr | 0x80,8);
    while (!(Chip_SPI_GetStatus(LPC_SPI1) & SPI_STAT_RXRDY)) {};
    temp = Chip_SPI_ReceiveFrame(LPC_SPI1);
    while(loop < size)
    {
        while(!(Chip_SPI_GetStatus(LPC_SPI1) & SPI_STAT_TXRDY));
        if(loop != (size - 1))
        {
            Chip_SPI_SendMidFrame(LPC_SPI1, buffer[loop]);
        }
        else
        {
            Chip_SPI_SendLastFrame(LPC_SPI1,buffer[loop],8);
        }
        while (!(Chip_SPI_GetStatus(LPC_SPI1) & SPI_STAT_RXRDY)) {};
        temp = Chip_SPI_ReceiveFrame(LPC_SPI1);
        loop ++;
    }
    /* Check error */
    if (Chip_SPI_GetStatus(LPC_SPI1) & (SPI_STAT_CLR_RXOV | SPI_STAT_CLR_TXUR)) {
        while(1);
    }
    //Chip_SPI_SetControlInfo(LPC_SPI1, 8, SPI_TXCTL_DEASSERT_SSEL);
#endif
#if 0
    uint8_t i;

    //NSS = 0;
    Chip_GPIO_SetPinOutLow(LPC_GPIO_PORT,0,14);
    Chip_SPI_SetControlInfo(LPC_SPI1, 8, 0);
    //DelayUs(5);
    SpiInOut( &SX1276.Spi, addr | 0x80 );
    for( i = 0; i < size; i++ )
    {
        SpiInOut( &SX1276.Spi, buffer[i] );
    }

    //NSS = 1;
    Chip_GPIO_SetPinOutHigh(LPC_GPIO_PORT,0,14);
#endif
}

void SX1276ReadBuffer( uint16_t addr, uint8_t *buffer, uint8_t size )
{
#if 1
    uint16_t loop = 0;
    Chip_SPI_ClearStatus(LPC_SPI1, SPI_STAT_CLR_RXOV | SPI_STAT_CLR_TXUR | SPI_STAT_CLR_SSA | SPI_STAT_CLR_SSD);
    //Chip_SPI_SetControlInfo(LPC_SPI1, 8, SPI_TXCTL_ASSERT_SSEL | SPI_TXCTL_EOF);
    while(!(Chip_SPI_GetStatus(LPC_SPI1) & SPI_STAT_TXRDY));
    Chip_SPI_SendFirstFrame(LPC_SPI1, addr & 0x7F,8);
    while (!(Chip_SPI_GetStatus(LPC_SPI1) & SPI_STAT_RXRDY)) {};
    buffer[0] = Chip_SPI_ReceiveFrame(LPC_SPI1);
    while(loop < size)
    {
      while (!(Chip_SPI_GetStatus(LPC_SPI1) & SPI_STAT_TXRDY)) {};
      if(loop != (size - 1))
      {
          Chip_SPI_SendMidFrame(LPC_SPI1, 0x55);
      }
      else
      {
          Chip_SPI_SendLastFrame(LPC_SPI1,0x55,8);
      }
      /* Make sure the last frame sent completely*/
      //while (!(Chip_SPI_GetStatus(LPC_SPI1) & SPI_STAT_SSD)) {}
      //Chip_SPI_ClearStatus(LPC_SPI1, SPI_STAT_CLR_SSD);
      while (!(Chip_SPI_GetStatus(LPC_SPI1) & SPI_STAT_RXRDY)) {};
      buffer[loop++] = Chip_SPI_ReceiveFrame(LPC_SPI1);
    }
    if (Chip_SPI_GetStatus(LPC_SPI1) & (SPI_STAT_CLR_RXOV | SPI_STAT_CLR_TXUR)) {
        while(1);
    }
    //Chip_SPI_SetControlInfo(LPC_SPI1, 8, SPI_TXCTL_DEASSERT_SSEL);
#endif
#if 0
    uint8_t i;

    //NSS = 0;
    Chip_GPIO_SetPinOutLow(LPC_GPIO_PORT,0,14);
    Chip_SPI_SetControlInfo(LPC_SPI1, 8, 0);
    //DelayUs(5);
    SpiInOut( &SX1276.Spi, addr & 0x7F );

    for( i = 0; i < size; i++ )
    {
        buffer[i] = SpiInOut( &SX1276.Spi, 0 );
    }

    //NSS = 1;
    Chip_GPIO_SetPinOutHigh(LPC_GPIO_PORT,0,14);
#endif
}
